# PTVideoAnnotator

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/static/css/: annotate.css
frontend/static/js/: annotate.js  paint.js  watch-paint.js  watch.js
frontend/templates/: annotate.html  watch.html
