[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kevin Chen <kevc528@seas.upenn.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
